Fixed text overflow on edge posts using css grid minmax

--- a/src/components/darkmode/Darkmode.module.css
+++ b/src/components/darkmode/Darkmode.module.css
@@ -1,4 +1,4 @@
-button {
+.darkmode {
     padding: 5px;
     outline: 0;
     border: 1px solid var(--text-color);
@@ -10,11 +10,11 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.darkmode:hover {
     background-color: var(--primary-lighter);
 }
 
-button svg {
+.darkmode svg {
     fill: var(--text-color)
 
 }
