--- a/src/components/navbar/NavBar.module.css
+++ b/src/components/navbar/NavBar.module.css
@@ -13,6 +13,10 @@
     box-shadow: 0px -10px 150px var(--gradient-start);
 }
 
+h1 {
+    font-size: 1.5rem;
+  }
+
 span {
     color: var(--accent-color);
 }
