--- a/src/index.css
+++ b/src/index.css
@@ -41,8 +41,3 @@ body {
   background-color: var(--background-color);
   color: var(--text-color);
 }
-
-
-h1 {
-  font-size: 1.5rem;
-}
